# telos-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  __init__.py  bridge.py  cast.py  cli.py  cli_menu.py  config.py  corpus.py  demo.py  example_developer_page.html  example_savings_dashboard.html  harnesses.py  ir.py  pyproject.toml  refpool.py  registry.py  vercel.json
docs/: 2026-05-04-monotonic-prompt-stream.md  2026-05-06-janus-prompt-architecture.md  2026-05-06-stela-protocol.md  2026-05-06-telos-benchmark-guide.md  2026-05-06-telos-protocol.md  2026-05-06-telos-stela-benchmark-guide.md  ARCHITECTURE.md  ARCHITECTURE_AND_GUIDE.md  User-guide.md  dashboard-developer-metrics.md  dashboard-savings-metrics.md  playbook.md  replay-comparison.md  showcase-runbook.md  swebench-ab.md
engine/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py  sglang.py  vllm.py
gateway/: __init__.py  __main__.py  control.py  daemon.py
harness/: __init__.py  _user_split.py  base.py  hermes.py  openclaw.py  telos.py
init/: __init__.py  __main__.py  anthropic_env.py  base.py  claude_code.py  codex.py  generic.py  hermes.py  openclaw.py
output_filter/: __init__.py  filters.py  mode.py  preprocess.py  tokens.py
packaging/: README.md  telos-sdk.rb
proxy/: __init__.py  __main__.py  inspector.py  pipeline.py  server.py
replay/: __init__.py  __main__.py
scripts/: __init__.py  build_dashboard.py  build_developer_page.py  build_savings_dashboard.py  demo_capture.py  run_swebench_batch.py  run_swebench_one.py  show_prompt_trace.py  showcase.py  stela_anthropic_transport.py  stela_transport.py  telos_anthropic_transport.py  telos_transport.py  transport.py
showcase/: corpus.jsonl  devcon-showcase-plan.md  replay_responses.json
site/: app.js  index.html  styles.css
site/api/: lead.js
tests/: test_band_order_regression.py  test_bridge_session_state.py  test_cast.py  test_cli_dispatch.py  test_config.py  test_corpus.py  test_developer_page.py  test_gateway_control_mode.py  test_gateway_daemon.py  test_harness_header_detection.py  test_harness_multiblock.py  test_harness_presets.py  test_harnesses.py  test_init_claude_code.py  test_init_codex.py  test_init_env_installers.py  test_init_gateway_url.py  test_init_hermes.py  test_init_hermes_multi.py  test_init_openclaw.py  test_init_openclaw_multi.py  test_output_filter.py  test_proxy_accumulation.py  test_proxy_dashboard.py  test_proxy_mode.py  test_proxy_openai_route.py  test_proxy_pipeline.py  test_proxy_server.py  test_proxy_session_id.py  test_replay.py  test_savings_dashboard.py  test_sdk_transport_accumulation.py  test_showcase.py  test_smoke.py  test_telos_harness_reasoning.py
