[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stela"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49",
    "openai>=1.72",
    "aiohttp>=3.10",
]

[project.scripts]
stela = "stela.cli:main"

[tool.setuptools]
# 当前目录（telos-sdk/）就是 stela 包本身；
# stela.harness → ./harness/，stela.engine → ./engine/，以此类推。
packages = [
    "stela",
    "stela.harness",
    "stela.engine",
    "stela.tests",
    "stela.scripts",
    "stela.proxy",
    "stela.init",
]

[tool.setuptools.package-dir]
stela = "."
