[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telos-sdk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49",
    "openai>=1.72",
    "aiohttp>=3.10",
]

[project.scripts]
telos = "telos.cli:main"

[tool.setuptools]
# 当前目录（telos-sdk/）就是 telos 包本身；
# telos.harness → ./harness/，telos.engine → ./engine/，以此类推。
packages = [
    "telos",
    "telos.harness",
    "telos.engine",
    "telos.tests",
    "telos.scripts",
    "telos.proxy",
    "telos.init",
    "telos.output_filter",
    "telos.replay",
]

[tool.setuptools.package-dir]
telos = "."
